条件式の修正

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   update-cask:
-    if: ${{ inputs.type === 'brew' }}
+    if: ${{ inputs.type == 'brew' }}
     runs-on: ubuntu-latest
     steps:
       - name: setup git user
